--- a/Controls/BizQueryControl.xaml
+++ b/Controls/BizQueryControl.xaml
@@ -89,17 +89,19 @@
                     <ColumnDefinition Width="200"/>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <!-- 비즈명 필터 -->
+                <!-- 그룹명 필터 -->
                 <TextBlock Grid.Column="0"
-                           Text="🔍 비즈명:"
+                           Text="🔍 그룹명:"
                            VerticalAlignment="Center"
                            FontWeight="SemiBold"
                            Margin="0,0,8,0"/>
 
-                <TextBox x:Name="BizNameFilterTextBox"
+                <TextBox x:Name="GroupNameFilterTextBox"
                          Grid.Column="1"
                          Height="30"
                          VerticalContentAlignment="Center"
@@ -108,15 +110,31 @@
                          Padding="8,4"
                          TextChanged="FilterTextBox_TextChanged"/>
 
-                <!-- 쿼리비즈명 필터 -->
+                <!-- 비즈명 필터 -->
                 <TextBlock Grid.Column="3"
+                           Text="🔍 비즈명:"
+                           VerticalAlignment="Center"
+                           FontWeight="SemiBold"
+                           Margin="0,0,8,0"/>
+
+                <TextBox x:Name="BizNameFilterTextBox"
+                         Grid.Column="4"
+                         Height="30"
+                         VerticalContentAlignment="Center"
+                         BorderBrush="#FF0078D7"
+                         BorderThickness="2"
+                         Padding="8,4"
+                         TextChanged="FilterTextBox_TextChanged"/>
+
+                <!-- 쿼리비즈명 필터 -->
+                <TextBlock Grid.Column="6"
                            Text="🔍 쿼리비즈명:"
                            VerticalAlignment="Center"
                            FontWeight="SemiBold"
                            Margin="0,0,8,0"/>
 
                 <TextBox x:Name="QueryBizNameFilterTextBox"
-                         Grid.Column="4"
+                         Grid.Column="7"
                          Height="30"
                          VerticalContentAlignment="Center"
                          BorderBrush="#FF0078D7"
@@ -126,7 +144,7 @@
 
                 <!-- 초기화 버튼 -->
                 <Button x:Name="ClearFilterButton"
-                        Grid.Column="6"
+                        Grid.Column="9"
                         Width="100"
                         Height="30"
                         Content="✖ 초기화"
